# CUDA-Practice

./: README.md
MLP/: CMakeLists.txt  Makefile  README.md  common.h  main.cpp  mlp.cpp  mlp.h  mlp_cuda.cu  mlp_cuda.h
MLP/data/: output_data.txt
Reduction/: Makefile
include/: arg_parse.hpp  cuda_aux.cuh  option_set.cpp  option_set.hpp  perf_timer.hpp  rand_aux.hpp
matmul/: matmul.cu  matmul_aux.cpp  matmul_aux.hpp
src/Attention/: Dockerfile  README.md  bench.py  flash_attn.cu  functional_test.py  main.cpp  naive_attn.cu
src/MLP/: MLP  main.cpp
src/MLP/data/: input_data.txt
src/MatMul/: main.cpp  matmul.cu  matmul.h
src/Reduction/: Makefile  main.cpp  reduce_sum.cu  reduce_sum.cuh  reduce_sum_aux.cpp  reduce_sum_aux.hpp
